--- a/style.css
+++ b/style.css
@@ -88,12 +88,15 @@ a:hover {
 }
 .item1 button {
   color: hsl(31, 77%, 52%);
+  font-family: "Lexend Deca", sans-serif;
 }
 .item2 button {
   color: hsl(184, 100%, 22%);
+  font-family: "Lexend Deca", sans-serif;
 }
 .item3 button {
   color: hsl(179, 100%, 13%);
+  font-family: "Lexend Deca", sans-serif;
 }
 
 .item1 button:hover {
