--- a/style.css
+++ b/style.css
@@ -131,45 +131,62 @@ a:hover {
 }
 
 /* ================= Styling For CSS Grid ================= */
-
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-auto-rows: minmax(80px, auto);
   gap: 10px;
-  margin: 40px auto;
-  max-width: 700px;
+  max-width: 768px;
 }
 
-.grid-items {
-  background-color: red;
-}
 .grid-item-1 {
-  grid-row: span 2;
-  grid-column: span 3;
   background-color: orangered;
 }
 
 .grid-item-2 {
-  grid-row: span 2;
   background-color: orange;
 }
 
 .grid-item-3 {
-  grid-row: span 2;
-  grid-column: span 2;
   background-color: green;
 }
 
 .grid-item-4 {
-  grid-row: span 1;
-  grid-column: span 2;
   background-color: blue;
 }
 .grid-item-5 {
-  grid-row: span 1;
-  grid-column: span 2;
   background-color: blue;
+}
+
+@media screen and (min-width: 768px) {
+  .grid-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: 40px auto;
+    padding: 20px;
+  }
+
+  .grid-item-1 {
+    grid-row: span 2;
+    grid-column: span 3;
+  }
+
+  .grid-item-2 {
+    grid-row: span 2;
+  }
+
+  .grid-item-3 {
+    grid-row: span 2;
+    grid-column: span 2;
+  }
+
+  .grid-item-4 {
+    grid-row: span 1;
+    grid-column: span 2;
+  }
+  .grid-item-5 {
+    grid-row: span 1;
+    grid-column: span 2;
+  }
 }
 
 /* ================= Styling For CSS Grid ================= */
